kubernetes/resourses/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: botva
  labels:
    name: botva
