kubernetes/resourses/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /ip
            pathType: Prefix
            backend:
              service:
                name: dsb-ui-deployment
                port:
                  number: 8080
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: dsb-ui-deployment
                port:
                  number: 8080
